# recipefy

./: .gitignore  Dockerfile  compose.yaml  recipefy.code-workspace
.devcontainer/: devcontainer.json
.github/workflows/: backend-workflows.yml  copy-node-modules.yml  docker-image.yml  frontend-workflows.yml  postgres-service.yml
backend/: .env.default  manage.py  pyproject.toml  pytest.ini  taskfile.dist.yaml
backend/server/: schema.yml
backend/server/api/: views.py
backend/server/authentication/api/: login.py  logout.py  register.py  token.py  urls.py  user.py
backend/server/config/: generators.py  routers.py  settings.py  test_settings.py  urls.py
backend/server/tests/authentication/: login_tests.py  logout_tests.py  register_tests.py  token_tests.py  user_tests.py
backend/server/tests/unit/: test_pytest_simple.py
frontend/: env.d.ts  eslint.config.ts  index.html  package-lock.json  package.json  taskfile.dist.yaml  tsconfig.app.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
frontend/src/__tests__/auth/: store.spec.ts
frontend/src/__tests__/layout/: DefaultNavigation.test.ts
frontend/src/__tests__/setup/: setup.ts  typings.ts
frontend/src/__tests__/store/: authStore.spec.ts
frontend/src/__tests__/views/: LoginView.spec.ts  MainView.test.ts  RegisterView.spec.ts
frontend/src/auth/: service.ts  store.ts
frontend/src/auth/components/: LoginView.vue  RegisterView.vue
frontend/src/commons/components/: ButtonComponent.vue
frontend/src/commons/utils/: apiClient.ts
frontend/src/components/: ButtonComponent.vue  InputComponent.vue  TitleComponent.vue
frontend/src/layout/: DefaultLayout.vue  DefaultNavigation.vue  TopNavbar.vue
frontend/src/main/components/: DefaultNavigation.vue  (+2 more)
frontend/src/router/: index.ts  paths.ts
frontend/src/service/: auth.ts
frontend/src/store/: authStore.ts
frontend/src/styling/: base.css  variables.css
frontend/src/typings/: authStore.ts
frontend/src/utils/: apiClient.ts
frontend/src/views/: LoginView.vue  MainView.vue  RegisterView.vue
(+3 files in other folders)
