[project]
name = "recipefy"
version = "0.1.0"
description = "Application to create recipes with AI"
authors = [
    {name = "Mateusz Kocik",email = "matkot11@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-cors-headers (>=4.3.1,<5.0.0)",
    "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.6",
    "pytest",
    "pytest-django",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)"
]
